SF Primes/src/objects/ActivityHistorySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Date_Field__c</fullName>
        <inlineHelpText>Enter the API Name of the Date Field (on the Last Activity object) to update with the activity date of the last activity (Event or Task).</inlineHelpText>
        <label>Date Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The Type value is used to match a User&apos;s Title when logging last activity history. If the value matches the User Title and the date of the matching activity is greater than the current logged activity, the field is updated with this new last activity.</description>
        <inlineHelpText>The Type value is used to match a User&apos;s Title when logging last activity history. If the value matches the User Title and the Date of the matching activity is greater than the current logged activity, the field is updated with this new last activity.</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Field__c</fullName>
        <inlineHelpText>Enter the API Name of the User Field (on the Last Activity object) to update with the Owner of the last activity (Event or Task).</inlineHelpText>
        <label>User Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Activity History Settings</label>
</CustomObject>